op2/fortran/include/op2_for_rt_wrappers.h

op_plan * FortranPlanCaller (char name[], op_set set,
  int partitionSize, int argsNumber, op_arg args[],
  int indsNumber, int inds[], int staging, int nhalos, int ncore);